Additional clarity for third party registrations

--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -479,7 +479,7 @@
                                           </div>
                                           <div></div>
                                           <div><br /></div>
-                                          <div><strong>Users, Vendors, and Partners.</strong> Data may be shared with us by users of our products and services, vendors, and partners ("<strong>third party sources</strong>") who utilize the platform.  We may at times accept this information as it pertains to the following activities as executed by Yellow Dog Man Studios, its Contractors, and its partners:</div>
+                                          <div><strong>Users, Vendors, and Partners.</strong> Data may be shared with us by users of our products and services, vendors, and partners ("<strong>third party sources</strong>") who utilize the platform.  We may at times accept this information as it pertains to the following activities as executed by Yellow Dog Man Studios, its Contractors, and its Partners:</div>
                                           <ul>
                                             <li>Moderation, e.g., ensuring that YDMS' products and services can be a safe space for its users</li>
                                           </ul>
@@ -493,7 +493,7 @@
                                           </ul>
                                           <div></div>
                                           <ul>
-                                            <li>Third party registrations, e.g., for third party identity services such as via SAML2</li>
+                                            <li>Third party registrations, e.g., for third party identity services compatible with SAML2</li>
                                           </ul>
                                           <div></div>
                                           <div><br /></div>
