Quick links to relevant sections; inclusion of compatible SAML2 third party identity service providers

--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -50,9 +50,9 @@
   <div><br /></div>
   <div><strong>What personal information do we process?</strong> When you visit, use, or navigate our Services, we may process personal information depending on how you interact with us and the Services, the choices you make, and the products and features you use. Learn more about <a href="#personalinfo">personal information you disclose to us</a>.</div>
   <div><br /></div>
-  <div><strong>Do we process any sensitive personal information?</strong> We collect and process the user's date of birth for reasons of ensuring users meet our minimum age threshold.</div>
+  <div><strong>Do we process any sensitive personal information?</strong> We collect and process the user's date of birth for reasons of ensuring users meet our minimum age threshold. Learn more about <a href="#personalinfo">sensitive information you disclose to us</a>.</div>
   <div><br /></div>
-  <div><strong>Do we receive any information from third parties?</strong> We may process information from third parties for reasons of providing moderation of the product and services offered.  Additionally, we may collect information from third parties in order to make various business level decisions, for example, event planning and attendance.</div>
+  <div><strong>Do we receive any information from third parties?</strong> We may process information from third parties for reasons of providing moderation of the product and services offered.  Additionally, we may collect information from third parties in order to make various business level decisions, for example, event planning and attendance. Learn more about <a href="#thirdpartysources">how and who we receive information from third parties</a>.</div>
   <div><br /></div>
   <div><strong>How do we process your information?</strong> We process your information to provide, improve, and administer our Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process your information for other purposes with your consent. We process your information only when we have a valid legal reason to do so. Learn more about <a href="#infouse">how we process your information</a>.</div>
   <div><br /></div>
@@ -516,6 +516,10 @@
                                           <div></div>
                                           <ul>
                                             <li>Social media</li>
+                                          </ul>
+                                          <div></div>
+                                          <ul>
+                                            <li>Compatible third party identity service providers</li>
                                           </ul>
                                           <div></div>
                                           <div><br /></div>
