Fix favicon missing on policy pages
Fixed missing favion <link> tag on the policy pages.

--- a/policies/EULA.html
+++ b/policies/EULA.html
@@ -3,6 +3,8 @@
     <head>
         <title>End User License Agreement</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
+        <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+        <link href="images/webclip.png" rel="apple-touch-icon">
         <meta charset="utf-8">
     </head>
     <body>
