--- a/careers/job-listing-template.html
+++ b/careers/job-listing-template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 16 2024 19:07:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 07 2024 16:16:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66ba6114dd8f8756049e2ad3" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99147033691406px, 100vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.9962158203125px, 100vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -48,6 +48,7 @@
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="http://resonite.com/Resonite_ResoniteWhitepaperOct2024_v01.pdf" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
                   </nav>
                 </div>
               </li>
@@ -135,7 +136,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 77vw, 158.99147033691406px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 74vw, 158.9962158203125px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
