--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Oct 09 2024 21:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 21 2024 18:22:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -116,21 +116,21 @@
         </div>
       </div>
       <div class="efi-pr-01-pricing-grid-wrapper">
-        <div data-current="Tab 3" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
+        <div data-current="Tab 2" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
           <div class="efi-pr-01-tab-menu w-tab-menu">
             <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Personal and Student</div>
             </a>
-            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link">
+            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link w--current">
               <div class="efi-tab-text">Commercial and Education</div>
             </a>
-            <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link w--current">
+            <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Enterprise and Government</div>
             </a>
           </div>
           <div class="efi-pr-01-tabs-content w-tab-content">
             <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane">
-              <div class="w-layout-grid efi-pr-01-pricing-grid">
+              <div class="w-layout-grid efi-pr-01-pricing-grid-copy">
                 <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ecb3-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
                     <div class="efi-pricing-header">
@@ -217,13 +217,49 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane">
-              <div class="w-layout-grid efi-pr-01-pricing-grid">
+            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
+              <div class="w-layout-grid efi-pr-01-pricing-grid-copy-copy">
+                <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01c0-9c8db035" class="efi-pr-01-pricing-cell">
+                  <div class="efi-pricing-container">
+                    <div class="efi-pricing-header">
+                      <h4 class="efi-h4">Small Business License</h4>
+                      <p class="efi-big-paragraph">Operate a small business on Resonite public universe <br>‍</p>
+                    </div>
+                    <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01c9-9c8db035" class="efi-price-block">
+                      <h2 class="efi-h2">$100/month<br>or $1000/year</h2>
+                    </div>
+                    <div class="efi-pricing-button-wrapper">
+                      <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
+                    </div>
+                    <div>
+                      <div class="efi-option">Eligibility:  &gt;$10k projected revenue within <br>12-month period</div>
+                    </div>
+                    <div class="efi-pricing-points">
+                      <div class="w-layout-grid efi-points-grid">
+                        <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01d4-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div>
+                          <div class="efi-option">Choose between monthly payments or discounted annual payments</div>
+                        </div>
+                        <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01d9-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div>
+                          <div class="efi-option">Cloud storage solutions starting at 500 MB</div>
+                        </div>
+                        <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01de-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div>
+                          <div class="efi-option">Operate your business on the public universe</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01e8-9c8db035" class="efi-pricing-button-wrapper">
+                    <a href="case-studies.html" class="efi-pricing-button w-button">Case Studies</a>
+                  </div>
+                </div>
                 <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed3b-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
                     <div class="efi-pricing-header">
                       <h4 class="efi-h4">Commercial Use License</h4>
-                      <p class="efi-big-paragraph">Build a business utilizing the Resonite platform</p>
+                      <p class="efi-big-paragraph">Build a business utilizing the Resonite platform<br>‍</p>
                     </div>
                     <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed42-9c8db035" class="efi-price-block">
                       <h2 class="efi-h2">Flexible pricing options</h2>
@@ -232,7 +268,7 @@
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
                     <div>
-                      <div class="efi-option">Eligibility:  Incorporated business with projected revenue greater than<br>$100k over 12 months</div>
+                      <div class="efi-option">Eligibility:  Incorporated business with projected revenue greater than $100k over 12 months</div>
                     </div>
                     <div class="efi-pricing-points">
                       <div class="w-layout-grid efi-points-grid">
@@ -266,7 +302,7 @@
                       <p class="efi-big-paragraph">Educate students and perform research utilizing the latest VR technology</p>
                     </div>
                     <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed6a-9c8db035" class="efi-price-block">
-                      <h2 class="efi-h2">Low annual fee</h2>
+                      <h2 class="efi-h2">Low annual fee<br>‍</h2>
                     </div>
                     <div class="efi-pricing-button-wrapper">
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
@@ -305,7 +341,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 3" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
+            <div data-w-tab="Tab 3" class="efi-pr-01-tab-pane w-tab-pane">
               <div class="w-layout-grid efi-pr-01-pricing-grid">
                 <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c573-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -348,44 +384,44 @@
                     <a href="case-studies.html" class="efi-pricing-button w-button">Case Studies</a>
                   </div>
                 </div>
-                <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5a5-9c8db035" class="efi-pr-01-pricing-cell">
+                <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bac-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
                     <div class="efi-pricing-header">
                       <h4 class="efi-h4">Government Use License</h4>
                       <p class="efi-big-paragraph">Training solutions secured behind your firewall</p>
                     </div>
-                    <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5ac-9c8db035" class="efi-price-block">
-                      <h2 class="efi-h2">Multi-Year contract duration</h2>
+                    <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bb3-9c8db035" class="efi-price-block">
+                      <h2 class="efi-h2">Multi-Year<br>contract duration</h2>
                     </div>
                     <div class="efi-pricing-button-wrapper">
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
                     <div class="efi-pricing-points">
                       <div class="w-layout-grid efi-points-grid">
-                        <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5b4-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bbb-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
                           <div class="efi-option">Negotiable Multi-Year contract duration</div>
                         </div>
-                        <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5b9-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bc0-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
                           <div class="efi-option">Custom White-Label solutions on your secured infrastructure</div>
                         </div>
-                        <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5be-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bc5-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
                           <div class="efi-option">Built on-demand training solutions</div>
                         </div>
-                        <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5c3-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bca-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
                           <div class="efi-option">Priority technical support</div>
                         </div>
-                        <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5c8-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
+                        <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bcf-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
                           <div class="efi-option">Training workshops for Admins</div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5d2-9c8db035" class="efi-pricing-button-wrapper">
+                  <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bd4-9c8db035" class="efi-pricing-button-wrapper">
                     <a href="case-studies.html" class="efi-pricing-button w-button">Case Studies</a>
                   </div>
                 </div>
@@ -399,7 +435,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 74vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 76vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
