--- a/case-studies/live-production.html
+++ b/case-studies/live-production.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 21 2024 18:22:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 21 2024 20:45:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="657cc7a03513dccd2c642647" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
-                    <a href="http://resonite.com/_0045_ResoniteMarketing_WhitepaperOct2024.pdf" target="_blank" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
+                    <a href="http://resonite.com/Whitepaper.pdf" target="_blank" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
                   </nav>
                 </div>
               </li>
