--- a/experimental-pages/user-account.html
+++ b/experimental-pages/user-account.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 21 2024 20:45:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Oct 24 2024 17:09:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="669ed84a1adcc9cb97bdc625" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -357,7 +357,9 @@
       </div>
     </div>
     <div class="footer-divider-2"></div>
-    <div class="footer-copyright-center-2">Copyright © 2023 Yellow Dog Man Studios s.r.o.</div>
+    <a href="https://yellowdogman.com/imprint.html" class="link-block-27 w-inline-block">
+      <div class="footer-copyright-center-2">Copyright © 2023 Yellow Dog Man Studios s.r.o.</div>
+    </a>
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=656504e52e383d09efa776a6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
