--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 21 2024 20:45:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Oct 24 2024 17:09:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -116,15 +116,15 @@
         </div>
       </div>
       <div class="efi-pr-01-pricing-grid-wrapper">
-        <div data-current="Tab 2" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
+        <div data-current="Tab 3" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
           <div class="efi-pr-01-tab-menu w-tab-menu">
             <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Personal and Student</div>
             </a>
-            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link w--current">
+            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Commercial and Education</div>
             </a>
-            <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link">
+            <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link w--current">
               <div class="efi-tab-text">Enterprise and Government</div>
             </a>
           </div>
@@ -217,7 +217,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
+            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane">
               <div class="w-layout-grid efi-pr-01-pricing-grid-copy-copy">
                 <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01c0-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -341,7 +341,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 3" class="efi-pr-01-tab-pane w-tab-pane">
+            <div data-w-tab="Tab 3" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
               <div class="w-layout-grid efi-pr-01-pricing-grid">
                 <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c573-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -391,7 +391,7 @@
                       <p class="efi-big-paragraph">Training solutions secured behind your firewall</p>
                     </div>
                     <div id="w-node-_1085983d-3063-fdfe-945c-f562cae38bb3-9c8db035" class="efi-price-block">
-                      <h2 class="efi-h2">Multi-Year<br>contract duration</h2>
+                      <h2 class="efi-h2">Multi-Year contract duration</h2>
                     </div>
                     <div class="efi-pricing-button-wrapper">
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
@@ -453,7 +453,9 @@
       </div>
     </div>
     <div class="footer-divider-2"></div>
-    <div class="footer-copyright-center-2">Copyright © 2023 Yellow Dog Man Studios s.r.o.</div>
+    <a href="https://yellowdogman.com/imprint.html" class="link-block-27 w-inline-block">
+      <div class="footer-copyright-center-2">Copyright © 2023 Yellow Dog Man Studios s.r.o.</div>
+    </a>
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=656504e52e383d09efa776a6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
