--- a/case-studies.html
+++ b/case-studies.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Oct 24 2024 17:09:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Nov 01 2024 19:43:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.9962158203125px, 100vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99147033691406px, 100vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -97,7 +97,7 @@
                 <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
-                <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
+                <a href="https://store.steampowered.com/app/2519830?utm_source=resonite-website" class="button-6 w-button">Download</a>
               </li>
             </ul>
           </nav>
