feat(guidelines): interolerance wording tweaks

--- a/policies/Guidelines.html
+++ b/policies/Guidelines.html
@@ -13,7 +13,7 @@
             <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
         </nav>
         <h1>User Guidelines</h1>
-        <p>Last Updated: February 14th, 2024</p>
+        <p>Last Updated: November 2nd, 2024</p>
 
         <h2>User Conduct</h2>
 
@@ -43,7 +43,7 @@
 
         <h3>Intolerance</h3>
 
-        <p>Hate or discrimination towards users based on age, gender, sexual orientation, spiritual beliefs, disability or other identifying traits.</p>
+        <p>Hate or discrimination towards users based on age, gender, sexual orientation, spiritual beliefs, disability or other immutable identifying traits of groups.</p>
 
         <p>This includes the usage of hateful symbols, language, or actions, and the organizing of or taking part in a group that advocates for any of the aforementioned hateful symbols, language, or actions.</p>
 
