--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -15,6 +15,10 @@
         <h1>Policy Changelog</h1>
         <p>For transparency, a list of changes to our polices are presented here.</p>
         <section>
+            <h2>November 2nd 2024 - User Guidelines</h2>
+            <p>We have made a small wording tweak to our user guidelines, in order to provide additional clarity regarding our Hate and discrimination guidelines.</p>
+        </section>
+        <section>
             <h2>June 8th 2024 - Content Licenses</h2>
             <p>We have added our content licenses as a policy page to further clarify how we license our content made for the Resonite platform for our users and other content creators.</p>
             <p>This includes exceptions to our standard content license, for example content made by team members for personal projects or unless otherwise specified for a piece of content.</p>
