--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Nov 01 2024 19:43:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Nov 08 2024 20:36:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
                 <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
               </li>
               <li>
-                <a href="merch.html" class="nav-link">Merch</a>
+                <a href="https://resonite.sellfy.store/" class="nav-link">Merch</a>
               </li>
               <li>
                 <a href="licensing.html" class="nav-link">Licensing</a>
