--- a/careers/marketing-and-design-apprenticeship.html
+++ b/careers/marketing-and-design-apprenticeship.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Jan 01 2025 23:16:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jan 16 2025 21:53:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66564c0681252b50ab00d833" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@
                 <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
               </li>
               <li>
-                <a href="../subscriptions-temporary.html" class="nav-link">Subscriptions</a>
+                <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830?utm_source=resonite-website" class="button-6 w-button">Download</a>
@@ -138,7 +138,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 74vw, 158.9962158203125px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 76vw, 158.9962158203125px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
