--- a/experimental-pages/interactive-custom-avatars.html
+++ b/experimental-pages/interactive-custom-avatars.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Jan 01 2025 23:16:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jan 16 2025 21:53:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65737ff1c7e5cad5067776dc" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@
                 <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
               </li>
               <li>
-                <a href="../subscriptions-temporary.html" class="nav-link">Subscriptions</a>
+                <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830?utm_source=resonite-website" class="button-6 w-button">Download</a>
