--- a/community-spotlight/avatar-makers.html
+++ b/community-spotlight/avatar-makers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 07 2025 20:16:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 20:10:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="657a33f497fefaf0ccdd8487" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, 158.9962158203125px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -94,7 +94,7 @@
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
+                <a href="http://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
               </li>
               <li>
                 <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
@@ -128,7 +128,7 @@
                 <a href="#" class="button-primary w-button">Creator Link</a>
               </div>
             </div>
-          </div><img src="../images/2023-11-10-02.01.37.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 40vw, 350px" srcset="../images/2023-11-10-02.01.37-p-500.jpg 500w, ../images/2023-11-10-02.01.37-p-800.jpg 800w, ../images/2023-11-10-02.01.37-p-1080.jpg 1080w, ../images/2023-11-10-02.01.37-p-1600.jpg 1600w, ../images/2023-11-10-02.01.37-p-2000.jpg 2000w, ../images/2023-11-10-02.01.37-p-2600.jpg 2600w, ../images/2023-11-10-02.01.37-p-3200.jpg 3200w, ../images/2023-11-10-02.01.37.jpg 3840w" alt="" class="testimonial-image-two">
+          </div><img src="../images/2023-11-10-02.01.37.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.992431640625px, 940px" srcset="../images/2023-11-10-02.01.37-p-500.jpg 500w, ../images/2023-11-10-02.01.37-p-800.jpg 800w, ../images/2023-11-10-02.01.37-p-1080.jpg 1080w, ../images/2023-11-10-02.01.37-p-1600.jpg 1600w, ../images/2023-11-10-02.01.37-p-2000.jpg 2000w, ../images/2023-11-10-02.01.37-p-2600.jpg 2600w, ../images/2023-11-10-02.01.37-p-3200.jpg 3200w, ../images/2023-11-10-02.01.37.jpg 3840w" alt="" class="testimonial-image-two">
         </div>
         <div class="testimonial-slide">
           <div class="testimonial-content">
@@ -139,7 +139,7 @@
                 <a href="#" class="button-primary w-button">Creator Link</a>
               </div>
             </div>
-          </div><img src="../images/2023-11-10-02.06.42.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 40vw, 350px" srcset="../images/2023-11-10-02.06.42-p-500.jpg 500w, ../images/2023-11-10-02.06.42-p-800.jpg 800w, ../images/2023-11-10-02.06.42-p-1080.jpg 1080w, ../images/2023-11-10-02.06.42-p-1600.jpg 1600w, ../images/2023-11-10-02.06.42-p-2000.jpg 2000w, ../images/2023-11-10-02.06.42-p-2600.jpg 2600w, ../images/2023-11-10-02.06.42-p-3200.jpg 3200w, ../images/2023-11-10-02.06.42.jpg 3840w" alt="" class="testimonial-image-two">
+          </div><img src="../images/2023-11-10-02.06.42.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.992431640625px, 940px" srcset="../images/2023-11-10-02.06.42-p-500.jpg 500w, ../images/2023-11-10-02.06.42-p-800.jpg 800w, ../images/2023-11-10-02.06.42-p-1080.jpg 1080w, ../images/2023-11-10-02.06.42-p-1600.jpg 1600w, ../images/2023-11-10-02.06.42-p-2000.jpg 2000w, ../images/2023-11-10-02.06.42-p-2600.jpg 2600w, ../images/2023-11-10-02.06.42-p-3200.jpg 3200w, ../images/2023-11-10-02.06.42.jpg 3840w" alt="" class="testimonial-image-two">
         </div>
       </div>
       <div class="w-layout-hflex"></div>
