--- a/careers.html
+++ b/careers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 07 2025 20:16:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 20:10:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66a4081478a4c64b373750a3" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -94,7 +94,7 @@
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
+                <a href="http://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
               </li>
               <li>
                 <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
@@ -116,19 +116,19 @@
       <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d0-373750a3" class="dash_h1">Current Openings</h1>
       <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d2-373750a3" class="heading-20">Keep an eye on our discord and socials for future opportunities!</h1>
       <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d4-373750a3" class="fn-faq-dark-wrapper">
-        <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d5-373750a3" class="heading-8-copy-copy">Marketing and Design Apprenticeship</h1>
-        <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d7-373750a3" class="heading-8-copy-copy-copy">Applications closed at this time.</h1>
+        <h1 class="heading-8-copy-copy">Marketing and Design Apprenticeship</h1>
+        <h1 class="heading-8-copy-copy-copy">Applications closed at this time.</h1>
         <a href="careers/marketing-and-design-apprenticeship.html" class="button-6-copy w-button">Learn More</a>
       </div>
     </div>
-    <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70db-373750a3" class="w-layout-blockcontainer container-24 w-container">
+    <div class="w-layout-blockcontainer container-24 w-container">
       <h1 class="heading-21">These are currently the only openings. Feel free to send your resume and portfolio anytime to careers@yellowdogman.com </h1>
     </div>
   </div>
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 74vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
