--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 07 2025 20:16:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 20:10:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -94,7 +94,7 @@
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
+                <a href="http://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
               </li>
               <li>
                 <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
@@ -146,7 +146,7 @@
                     <div id="w-node-_5803b901-96cb-5b53-82d9-49698df88f4e-9c8db035" class="efi-pricing-button-wrapper">
                       <a href="https://store.steampowered.com/app/2519830/Resonite/" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
-                    <div id="w-node-f783582e-6117-a129-68f7-8a3378802fb7-9c8db035">
+                    <div>
                       <div class="efi-option">Eligibility:  Revenue less than $100k in the last 12 months </div>
                     </div>
                     <div class="efi-pricing-points">
@@ -183,10 +183,10 @@
                     <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ece2-9c8db035" class="efi-price-block">
                       <h2 class="efi-h2">Free forever.</h2>
                     </div>
-                    <div id="w-node-c9d1c06d-f805-4f60-fbc4-91092a96e156-9c8db035" class="efi-pricing-button-wrapper">
+                    <div class="efi-pricing-button-wrapper">
                       <a href="https://store.steampowered.com/app/2519830/Resonite/" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
-                    <div id="w-node-d938885d-be49-59f5-2e0e-9dab5ada9ffb-9c8db035">
+                    <div>
                       <div class="efi-option">Eligibility:  Students 16 years and older enrolled in an educational institution</div>
                     </div>
                     <div class="efi-pricing-points">
@@ -438,7 +438,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 74vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
